force-app/main/default/objects/Auth_Token__mdt/Auth_Token__mdt.object-meta.xml
<CustomObject>
    <description>Authorization tokens custom metadata</description>
    <label>Auth Token</label>
    <pluralLabel>Auth Tokens</pluralLabel>
</CustomObject>