force-app/main/default/objects/Auth_Token__mdt/fields/api_version__c.field-meta.xml
<CustomField>
    <fullName>api_version__c</fullName>
    <label>api version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>