force-app/main/default/objects/Auth_Token__mdt/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>API key</description>
    <label>key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>