force-app/main/default/objects/Auth_Token__mdt/fields/service_name__c.field-meta.xml
<CustomField>
    <fullName>service_name__c</fullName>
    <label>service name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>